tests/snapshots/interactive_tui_resize_snapshots__resize_horizontal_shrunk.snap
---
source: tests/interactive_tui_resize_snapshots.rs
expression: frame
---
Frankie - Review Comments                                               
Filter: All (18/18)                                                     
                                                                        
> [reviewer-1] src/component_02.rs:1: Fixture review 1: adjust layou... 
  [reviewer-2] src/component_03.rs:2: Fixture review 2: adjust layou... 
  [reviewer-3] src/component_04.rs:3: Fixture review 3: adjust layou... 
  [reviewer-4] src/component_05.rs:4: Fixture review 4: adjust layou... 
  [reviewer-5] src/component_01.rs:5: Fixture review 5: adjust layou... 
  [reviewer-6] src/component_02.rs:6: Fixture review 6: adjust layou... 
  [reviewer-7] src/component_03.rs:7: Fixture review 7: adjust layou... 
  [reviewer-8] src/component_04.rs:8: Fixture review 8: adjust layou... 
  [reviewer-9] src/component_05.rs:9: Fixture review 9: adjust layou... 
  [reviewer-10] src/component_01.rs:10: Fixture review 10: adjust la... 
  [reviewer-11] src/component_02.rs:11: Fixture review 11: adjust la... 
  [reviewer-12] src/component_03.rs:12: Fixture review 12: adjust la... 
  [reviewer-13] src/component_04.rs:13: Fixture review 13: adjust la... 
  [reviewer-14] src/component_05.rs:14: Fixture review 14: adjust la... 
  [reviewer-15] src/component_01.rs:15: Fixture review 15: adjust la... 
  [reviewer-16] src/component_02.rs:16: Fixture review 16: adjust la... 
  [reviewer-17] src/component_03.rs:17: Fixture review 17: adjust la... 
  [reviewer-18] src/component_04.rs:18: Fixture review 18: adjust la... 
─────────────────────────────────────────────────────────────────────── 
...                                                                     
q:quit  ?:help  j/k:move  f:filter  v/V:verify  a:reply  x:codex
