tests/snapshots/interactive_tui_resize_snapshots__resize_shrunk.snap
---
source: tests/interactive_tui_resize_snapshots.rs
expression: frame
---
Frankie - Review Comments                                                       
Filter: All (18/18)                                                             
                                                                                
> [reviewer-1] src/component_02.rs:1: Fixture review 1: adjust layout and co... 
  [reviewer-2] src/component_03.rs:2: Fixture review 2: adjust layout and co... 
  [reviewer-3] src/component_04.rs:3: Fixture review 3: adjust layout and co... 
  [reviewer-4] src/component_05.rs:4: Fixture review 4: adjust layout and co... 
  [reviewer-5] src/component_01.rs:5: Fixture review 5: adjust layout and co... 
  [reviewer-6] src/component_02.rs:6: Fixture review 6: adjust layout and co... 
  [reviewer-7] src/component_03.rs:7: Fixture review 7: adjust layout and co... 
  [reviewer-8] src/component_04.rs:8: Fixture review 8: adjust layout and co... 
─────────────────────────────────────────────────────────────────────────────── 
...                                                                             
q:quit  ?:help  j/k:move  f:filter  v/V:verify  a:reply  x:codex
