tests/snapshots/interactive_tui_resize_snapshots__resize_start.snap
---
source: tests/interactive_tui_resize_snapshots.rs
assertion_line: 385
expression: frame
---
Frankie - Review Comments                                                       
Filter: All (18/18)                                                             
                                                                                
> [reviewer-1] src/component_02.rs:1: Fixture review 1: adjust layout and co... 
  [reviewer-2] src/component_03.rs:2: Fixture review 2: adjust layout and co... 
  [reviewer-3] src/component_04.rs:3: Fixture review 3: adjust layout and co... 
  [reviewer-4] src/component_05.rs:4: Fixture review 4: adjust layout and co... 
  [reviewer-5] src/component_01.rs:5: Fixture review 5: adjust layout and co... 
  [reviewer-6] src/component_02.rs:6: Fixture review 6: adjust layout and co... 
  [reviewer-7] src/component_03.rs:7: Fixture review 7: adjust layout and co... 
  [reviewer-8] src/component_04.rs:8: Fixture review 8: adjust layout and co... 
  [reviewer-9] src/component_05.rs:9: Fixture review 9: adjust layout and co... 
  [reviewer-10] src/component_01.rs:10: Fixture review 10: adjust layout and... 
  [reviewer-11] src/component_02.rs:11: Fixture review 11: adjust layout and... 
  [reviewer-12] src/component_03.rs:12: Fixture review 12: adjust layout and... 
  [reviewer-13] src/component_04.rs:13: Fixture review 13: adjust layout and... 
  [reviewer-14] src/component_05.rs:14: Fixture review 14: adjust layout and... 
  [reviewer-15] src/component_01.rs:15: Fixture review 15: adjust layout and... 
  [reviewer-16] src/component_02.rs:16: Fixture review 16: adjust layout and... 
  [reviewer-17] src/component_03.rs:17: Fixture review 17: adjust layout and... 
  [reviewer-18] src/component_04.rs:18: Fixture review 18: adjust layout and... 
─────────────────────────────────────────────────────────────────────────────── 
...                                                                             
q:quit  ?:help  j/k:move  f:filter  v:verify  a:reply  x:codex
